--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "nativescript-angular": "~8.2.0",
+    "nativescript-material-button": "^2.3.23",
+    "nativescript-material-components": "^1.2.1",
     "nativescript-ngx-shadow": "^6.5.0",
     "nativescript-theme-core": "~1.0.6",
     "nativescript-ui-sidedrawer": "~7.0.0",
@@ -38,6 +40,7 @@
     "codelyzer": "~4.5.0",
     "nativescript-dev-webpack": "~1.2.0",
     "node-sass": "^4.7.1",
+    "tns-platform-declarations": "^6.1.0",
     "tslint": "~5.19.0",
     "typescript": "~3.5.3"
   },
