--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
     "nativescript-angular": "~8.2.0",
+    "nativescript-barcodescanner": "^3.3.2",
     "nativescript-material-button": "^2.3.23",
     "nativescript-material-components": "^1.2.1",
     "nativescript-ngx-shadow": "^6.5.0",
