--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "repository": "<fill-your-repository-here>",
   "scripts": {
     "lint": "tslint \"src/**/*.ts\"",
+    "start": "tns run android --env.verbose",
     "dev": "tns run android --env.aot --env.uglify --env.verbose"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "@nstudio/nativescript-floatingactionbutton": "^1.1.0",
     "nativescript-angular": "~8.2.0",
     "nativescript-barcodescanner": "^3.3.2",
     "nativescript-material-bottomsheet": "^2.3.24",
@@ -32,6 +34,7 @@
     "nativescript-ng-ripple": "^2.0.1",
     "nativescript-ngx-shadow": "^6.5.0",
     "nativescript-theme-core": "~1.0.6",
+    "nativescript-ui-listview": "^7.0.5",
     "nativescript-ui-sidedrawer": "~7.0.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
