--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "nativescript": {
     "id": "org.nativescript.tnspos",
     "tns-android": {
-      "version": "6.1.0"
+      "version": "6.1.1"
     },
     "tns-ios": {
-      "version": "6.1.0"
+      "version": "6.1.1"
     }
   },
   "description": "NativeScript Application",
@@ -13,8 +13,7 @@
   "repository": "<fill-your-repository-here>",
   "scripts": {
     "lint": "tslint \"src/**/*.ts\"",
-    "start": "tns run android --env.verbose",
-    "dev": "tns run android --env.aot --env.uglify --env.verbose"
+    "start": "tns run android --env.verbose"
   },
   "dependencies": {
     "@angular/animations": "~8.2.0",
@@ -38,7 +37,7 @@
     "nativescript-ui-sidedrawer": "~7.0.0",
     "reflect-metadata": "~0.1.12",
     "rxjs": "^6.4.0",
-    "tns-core-modules": "~6.1.0",
+    "tns-core-modules": "~6.1.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -47,7 +46,7 @@
     "codelyzer": "~4.5.0",
     "nativescript-dev-webpack": "~1.2.0",
     "node-sass": "^4.7.1",
-    "tns-platform-declarations": "^6.1.0",
+    "tns-platform-declarations": "^6.1.1",
     "tslint": "~5.19.0",
     "typescript": "~3.5.3"
   },
