--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular/cli": "^8.3.5",
     "@angular/compiler-cli": "~8.2.0",
+    "@nativescript/schematics": "^0.7.1",
     "@ngtools/webpack": "~8.2.0",
     "codelyzer": "~4.5.0",
     "nativescript-dev-webpack": "~1.2.0",
