--- a/.update_backup/package.json
+++ b/.update_backup/package.json
@@ -2,7 +2,7 @@
   "nativescript": {
     "id": "my.mazlan.poslajutracking",
     "tns-android": {
-      "version": "6.2.0-rc-2019-10-23-094316-01"
+      "version": "6.1.1"
     },
     "tns-ios": {
       "version": "6.1.1"
@@ -48,7 +48,7 @@
     "@nativescript/schematics": "^0.7.1",
     "@ngtools/webpack": "~8.2.0",
     "codelyzer": "~4.5.0",
-    "nativescript-dev-webpack": "^1.3.0-rc-2019-10-25-214000-02",
+    "nativescript-dev-webpack": "~1.2.0",
     "node-sass": "^4.7.1",
     "tns-platform-declarations": "^6.1.1",
     "tslint": "~5.19.0",
